--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=5.4",
         "psr/http-message": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "~4.8"
     },
     "autoload": {
         "psr-4": { "Thruster\\Component\\HttpModifier\\": "src" }
@@ -27,7 +27,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-php5": "1.0-dev"
         }
     }
 }
